Updates: Auto Hide when fixed with collapse / expand functionality Image override for auto hide icon Text collapsed / expanded Top Level Div Style option

--- a/ccscl/force-app/main/default/lwc/ccpSocialShare/ccpSocialShare.css
+++ b/ccscl/force-app/main/default/lwc/ccpSocialShare/ccpSocialShare.css
@@ -74,3 +74,13 @@
 {
     right: 0;
 }
+
+.fixed.fixed-right .socialShareLink
+{
+    text-align: right;
+}
+
+.fixed.fixed-left .socialShareLink
+{
+    text-align: left;
+}
